infrastructure/keycloak/templates/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: auth
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
  - port: 80
    targetPort: 8080
