infrastructure/keycloak/templates/keycloak-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: auth
spec:
  parentRefs:
    - name: fitforge-gateway
      namespace: fitforge-prod
  hostnames:
    - headlamp.fitforge360.in
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth
      backendRefs:
        - name: keycloak
          port: 80
